--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "Notre-Dame de Paris"
+title = "Naths Excellent Website"
 baseURL = "https://nathswebsite.netlify.com"
 languageCode = "en-us"
 theme = "gohugo-theme-ananke"
